--- a/MediaPlayerMidterm/MediaPlayerMidterm/MediaPlayerMidterm.csproj
+++ b/MediaPlayerMidterm/MediaPlayerMidterm/MediaPlayerMidterm.csproj
@@ -80,6 +80,10 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="Newtonsoft.Json, Version=9.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.9.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System" />
     <Reference Include="System.Data" />
@@ -119,10 +123,6 @@
     <Reference Include="Antlr3.Runtime">
       <Private>True</Private>
       <HintPath>..\packages\Antlr.3.4.1.9004\lib\Antlr3.Runtime.dll</HintPath>
-    </Reference>
-    <Reference Include="Newtonsoft.Json">
-      <Private>True</Private>
-      <HintPath>..\packages\Newtonsoft.Json.6.0.4\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.AspNet.Web.Optimization.WebForms">
       <Private>True</Private>
@@ -232,6 +232,7 @@
     <Content Include="images\fulls\05.jpg" />
     <Content Include="images\fulls\06.jpg" />
     <Content Include="images\fulls\07.jpg" />
+    <Content Include="images\logo.jpg" />
     <Content Include="images\thumbs\01.jpg" />
     <Content Include="images\thumbs\02.jpg" />
     <Content Include="images\thumbs\03.jpg" />
