--- a/MediaPlayerMidterm/MediaPlayerMidterm/Web.config
+++ b/MediaPlayerMidterm/MediaPlayerMidterm/Web.config
@@ -10,11 +10,15 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-MediaPlayerMidterm-20160927054352.mdf;Initial Catalog=aspnet-MediaPlayerMidterm-20160927054352;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="MattsPracticeDatabase" connectionString="Password=mshirk70815;Persist Security Info=True;User ID=mshirk;Initial Catalog=MattsPracticeDatabase;Data Source=dallaswin200.arvixeshared.com" />
   </connectionStrings>
   <system.web>
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.5.2" />
-    <httpRuntime targetFramework="4.5.2" />
+   
+   
+      <httpRuntime executionTimeout="100000" maxRequestLength="214748364" />
+   
     <pages>
       <namespaces>
         <add namespace="System.Web.Optimization" />
@@ -119,4 +123,5 @@
       <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:14 /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
     </compilers>
   </system.codedom>
+
 </configuration>
