--- a/MediaPlayerMidterm/MediaPlayerMidterm/Web.config
+++ b/MediaPlayerMidterm/MediaPlayerMidterm/Web.config
@@ -18,6 +18,10 @@
    
    
       <httpRuntime executionTimeout="100000" maxRequestLength="214748364" />
+    
+        <!-- This will handle requests up to 50MB -->
+      
+     
    
     <pages>
       <namespaces>
@@ -74,6 +78,14 @@
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" preCondition="managedHandler" />
     </modules>
     <validation validateIntegratedModeConfiguration="false" />
+   
+      <security>
+        <requestFiltering>
+          <!-- This will handle requests up to 50MB -->
+          <requestLimits maxAllowedContentLength="252428800"  />
+        </requestFiltering>
+      </security>
+  
   </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
