--- a/MediaPlayerMidterm/MediaPlayerMidterm/MediaPlayerMidterm.csproj
+++ b/MediaPlayerMidterm/MediaPlayerMidterm/MediaPlayerMidterm.csproj
@@ -301,6 +301,8 @@
     <Content Include="skin\pink.flag\mustache\jplayer.pink.flag.audio.stream.html" />
     <Content Include="skin\pink.flag\mustache\jplayer.pink.flag.video.playlist.html" />
     <Content Include="skin\pink.flag\mustache\jplayer.pink.flag.video.single.html" />
+    <Content Include="UploadedMusic\07 Forbidden City.mp3" />
+    <Content Include="UploadedMusic\07 Lindsey Stirling - Transcendence.mp3" />
     <Content Include="ViewSwitcher.ascx" />
     <Content Include="Web.config" />
     <Content Include="Bundle.config" />
@@ -484,7 +486,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="UploadedMusic\" />
   </ItemGroup>
   <ItemGroup>
     <COMReference Include="MediaPlayer">
@@ -505,8 +506,26 @@
       <Isolated>False</Isolated>
       <EmbedInteropTypes>True</EmbedInteropTypes>
     </COMReference>
+    <COMReference Include="WMPDXMLib">
+      <Guid>{73F0DD5C-D071-46B6-A8BF-897C84EAAC49}</Guid>
+      <VersionMajor>1</VersionMajor>
+      <VersionMinor>0</VersionMinor>
+      <Lcid>0</Lcid>
+      <WrapperTool>tlbimp</WrapperTool>
+      <Isolated>False</Isolated>
+      <EmbedInteropTypes>True</EmbedInteropTypes>
+    </COMReference>
     <COMReference Include="WMPLib">
       <Guid>{6BF52A50-394A-11D3-B153-00C04F79FAA6}</Guid>
+      <VersionMajor>1</VersionMajor>
+      <VersionMinor>0</VersionMinor>
+      <Lcid>0</Lcid>
+      <WrapperTool>tlbimp</WrapperTool>
+      <Isolated>False</Isolated>
+      <EmbedInteropTypes>True</EmbedInteropTypes>
+    </COMReference>
+    <COMReference Include="WMPRichPreviewLauncher">
+      <Guid>{FA258721-CF24-45D7-A9CB-80047D7FEC35}</Guid>
       <VersionMajor>1</VersionMajor>
       <VersionMinor>0</VersionMinor>
       <Lcid>0</Lcid>
